[semantic_release]
version_variable = honeybee_ph/__init__.py:__version__

[bdist_wheel]
universal = 1

[metadata]
author=PH-Tools
author_email=phtools@bldgtyp.com
url=https://github.com/PH-Tools/honeybee_ph
license=GPLv3+
license_files = LICENSE
name = honeybee-ph
description = Plugin for Honeybee to enable Passive House modeling.
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests*
    diagrams*
    docs*

[egg_info]
tag_build = 
tag_date = 0

